fixing page titles on mobile

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -62,7 +62,7 @@
         font-size: 3vh;
     }
 
-    .tagline {
+    .tagline-heading {
         font-size: 3vh;
     }
 }
